Fix loader not showing

--- a/src/app/_components/UI/loader/Loader.module.scss
+++ b/src/app/_components/UI/loader/Loader.module.scss
@@ -5,15 +5,15 @@
     margin: 0;
     padding: 0;
     position: fixed;
-    top: 0;
+    top: 6.5rem; // = Header height
     right: 0;
     bottom: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 100;
-    background-color: $color-primary-dark;
+    z-index: 1000000;
+    background-color: $color-white;
   }
 
   .loader {
